[package]
name = "hevy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["parsing", "formatting", "serde"] }
